--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="de">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +7,8 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #2d2b36; /* Dunkelgrauer bis schwarzer Hintergrund wie Login-Seite */
-            color: #ecf0f1; /* Weiße Textfarbe */
+            background-color: #2d2b36;
+            color: #ecf0f1;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -22,30 +21,27 @@
             font-weight: bold;
             text-align: center;
             padding: 20px;
-            background-color: #34495e; /* Dunkelgrau für das Textfeld */
-            color: #ffffff; /* Weiße Textfarbe im Textfeld */
+            background-color: #34495e;
+            color: #ffffff;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: background-color 0.3s; /* Smooth transition für Hintergrundfarbe */
+            transition: background-color 0.3s;
             width: 80%;
             max-width: 600px;
             margin: auto;
-            margin-top: 50px; /* Abstand vom oberen Rand */
         }
 
         #codeDisplay:hover {
-            background-color: #2c3e50; /* Etwas helleres Grau beim Überfahren mit der Maus */
+            background-color: #2c3e50;
         }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
     <script>
-        // Text-to-Speech Funktion
         function speakText(text) {
             const utterance = new SpeechSynthesisUtterance(text);
             window.speechSynthesis.speak(utterance);
         }
 
-        // Funktion zur Initialisierung der Spracherkennung
         function initializeSpeechRecognition() {
             const socket = io();
             const codeDisplay = document.getElementById("codeDisplay");
@@ -54,8 +50,8 @@
 
             if (window.SpeechRecognition) {
                 const recognition = new SpeechRecognition();
-
                 recognition.lang = 'de-DE';
+                recognition.interimResults = false; // Keine Zwischenergebnisse
                 recognition.continuous = true; // Kontinuierliches Hören aktivieren
 
                 const codeMappings = {
@@ -63,21 +59,8 @@
                     "2": "Code 2: Dringend.",
                     "3": "Code 3: Notfall/Lichter und Sirene.",
                     "4": "Code 4: Keine weitere Hilfe erforderlich.",
-                    "5": "Code 5: Observierung.",
                     "6": "Code 6: Antwort von weiter Entfernung.",
-                    "7": "Code 7: Essenszeit.",
-                    "8": "Code 8: Anfrage nach Deckung/Unterstützung.",
-                    "9": "Code 9: Ein Straßensperre einrichten.",
-                    "10": "Code 10: Bombendrohung.",
-                    "12": "Code 12: Nachrichtenmedien benachrichtigen.",
-                    "20": "Code 20: Beamter benötigt Hilfe.",
-                    "22": "Code 22: Eingeschränkter Funkverkehr.",
-                    "30": "Code 30: Beamter benötigt HILFE - NOTFALL!",
-                    "33": "Code 33: Mobile Notfall - diesen Funkkanal freigeben.",
-                    "43": "Code 43: Taktische Einheiten im Einsatz.",
-                    "99": "Code 99: Officer in Gefahr sofortige Verstärkung benötigt.",
                     "1066": "Code 1066: Verdächtige Person.",
-                    // Weitere Code-Einträge hier hinzufügen nach Bedarf
                 };
 
                 const sendCodeToServer = (username, code) => {
@@ -99,7 +82,7 @@
                                 codeDisplay.textContent = '';
                             }, 6000);
 
-                            const username = 'Benutzer1'; // Hier den Benutzernamen entsprechend einfügen
+                            const username = 'Benutzer1';
                             sendCodeToServer(username, recognizedCode);
                         } else {
                             codeDisplay.textContent = `Unbekannter Code: ${transcript}`;
@@ -120,16 +103,11 @@
                 };
 
                 recognition.start(); // Start der Spracherkennung automatisch
-
-                socket.on('updateCodes', (data) => {
-                    console.log('Aktualisierte Codes:', data);
-                });
             } else {
                 console.error('Ihr Browser unterstützt die Spracherkennung nicht.');
             }
         }
 
-        // Initialisierung der Spracherkennung bei Seitenladung
         document.addEventListener('DOMContentLoaded', () => {
             initializeSpeechRecognition();
         });
@@ -137,7 +115,7 @@
 </head>
 
 <body>
-    <div id="codeDisplay" role="alert" aria-live="assertive"></div> <!-- ARIA roles für Zugänglichkeit -->
+    <div id="codeDisplay" role="alert" aria-live="assertive"></div>
 </body>
 
 </html>
