--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #2d2b36;
-            color: #ecf0f1;
+            background-color: #2d2b36; /* Hintergrundfarbe */
+            color: #ecf0f1; /* Textfarbe */
             display: flex;
             align-items: center;
             justify-content: center;
@@ -21,18 +21,17 @@
             font-weight: bold;
             text-align: center;
             padding: 20px;
-            background-color: #34495e;
-            color: #ffffff;
+            background-color: #34495e; /* Hintergrund für das Textfeld */
+            color: #ffffff; /* Textfarbe im Textfeld */
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: background-color 0.3s;
             width: 80%;
             max-width: 600px;
             margin: auto;
         }
 
         #codeDisplay:hover {
-            background-color: #2c3e50;
+            background-color: #2c3e50; /* Hover-Effekt */
         }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
@@ -51,7 +50,7 @@
             if (window.SpeechRecognition) {
                 const recognition = new SpeechRecognition();
                 recognition.lang = 'de-DE';
-                recognition.interimResults = false; // Keine Zwischenergebnisse
+                recognition.interimResults = false; // Nur endgültige Ergebnisse
                 recognition.continuous = true; // Kontinuierliches Hören aktivieren
 
                 const codeMappings = {
@@ -68,7 +67,7 @@
                 };
 
                 recognition.onresult = (event) => {
-                    const transcript = event.results[0][0].transcript.trim().toLowerCase();
+                    const transcript = event.results[0][0].transcript.trim();
                     const numbersOnly = transcript.replace(/\D/g, '');
 
                     if (numbersOnly.length > 0) {
@@ -99,10 +98,10 @@
                 };
 
                 recognition.onend = () => {
-                    recognition.start(); // Spracherkennung nach Beendigung neu starten
+                    recognition.start(); // Spracherkennung neu starten
                 };
 
-                recognition.start(); // Start der Spracherkennung automatisch
+                recognition.start(); // Spracherkennung starten
             } else {
                 console.error('Ihr Browser unterstützt die Spracherkennung nicht.');
             }
