--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </script>
 </head>
 <body>
-    <img id="logo" src="logo.png" alt="Logo"> <!-- Logo hier einfügen -->
+    <img id="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/aa/Seal_of_the_Los_Angeles_Police_Department.png/220px-Seal_of_the_Los_Angeles_Police_Department.png" alt="Logo"> <!-- Logo hier einfügen -->
     <div id="codeDisplay" role="alert" aria-live="assertive"></div>
 </body>
 </html>
